--- a/config/config.conf
+++ b/config/config.conf
@@ -1,7 +1,7 @@
 server    
 {
 	listen          8080;
-	listen          8000; #hello im comments
+	listen          8000; #hello im comment
 	listen          8020;
 
 	host 0.0.0.0;
@@ -15,7 +15,7 @@ server
 	error_page 500 /errors/500.html;
 	error_page 502 /errors/502.html;   #comment fdgfdgfd
 
-	root /home/achraf/Desktop/owe/public;
+	root /home/achraf/Desktop/webserv/public;
 
 	location /
 	{
@@ -51,6 +51,4 @@ server
 		upload_enable on;
 		upload_store /upload;
 	}
-}
-
 }
