--- a/config/config.conf
+++ b/config/config.conf
@@ -1,4 +1,4 @@
-server    
+server;
 {
 	listen          8080;
 	listen          8000; #hello im comment
@@ -26,23 +26,11 @@ server
 		allow_methods [GET,POST,DELETE];
 	}
 
-	location /return
-	{
-		return 301 /;
-	}
-
 	location *.php
 	{
 		allow_methods [GET,POST];
 
 		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
-	}
-
-	location *.py
-	{
-		allow_methods [GET,POST];
-
-		fastcgi_pass /usr/bin/python;
 	}
 
 	location /upload
