--- a/config/config.conf
+++ b/config/config.conf
@@ -1,42 +1,46 @@
-server;
-{
+server
+[
 	listen          8080;
 	listen          8000; #hello im comment
 	listen          8020;
+	# host 0.0.0.0;
+	# server_name     example.com;
+	# client_max_body_size    1m;
+	# error_page 403 /errors/403.html;
+	# error_page 404 /errors/404.html;
+	# error_page 500 /errors/500.html;
+	# error_page 502 /errors/502.html;   #comment fdgfdgfd
+	# root /home/achraf/Desktop/webserv/public;
+	# location /
+	# {
+	# 	autoindex off;
+	# 	index index.html;
+	# 	allow_methods [GET,POST,DELETE];
+	# }
+	# location *.php
+	# {
+	# 	allow_methods [GET,POST];
+	# 	fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
+	# }
+	# location /upload
+	# {
+	# 	allow_methods [POST, GET];
+	# 	upload_enable on;
+	# 	upload_store /upload;
+	# }
+]
 
-	host 0.0.0.0;
+server
+[
+	listen          5080;
+	listen 5000; #hello im comment
+	listen          5020;
+	# host 0.0.0.0;
+	# server_name     example.com; client_max_body_size    1m;
+# 	error_page 403 /errors/403.html;
+# 	error_page 404 /errors/404.html;
+# 	error_page 500 /errors/500.html;
+# 	error_page 502 /errors/502.html;   #comment fdgfdgfd
+	# root /home/achraf/Desktop/webserv/public2;
 
-	server_name     example.com;
-
-	client_max_body_size    1m;
-
-	error_page 403 /errors/403.html;
-	error_page 404 /errors/404.html;fsdfd
-	error_page 500 /errors/500.html;
-	error_page 502 /errors/502.html;   #comment fdgfdgfd
-
-	root /home/achraf/Desktop/webserv/public;
-
-	location /
-	{
-		autoindex off;
-
-		index index.html;
-
-		allow_methods [GET,POST,DELETE];
-	}
-
-	location *.php
-	{
-		allow_methods [GET,POST];
-
-		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
-	}
-
-	location /upload
-	{
-		allow_methods [POST, GET];
-		upload_enable on;
-		upload_store /upload;
-	}
-}
+]
