--- a/config/config.conf
+++ b/config/config.conf
@@ -13,9 +13,10 @@ server
 	root /home/achraf/Desktop/webserv/public2;
 	location /
 	{
-		autoindex off;
+		autoindex on;
 		index index.html;
 		allow_methods [GET,POST,DELETE];
+		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
 	}
 	location *.php
 	{
@@ -32,15 +33,33 @@ server
 
 server
 [
-	listen          5080;
-	listen 5000; #hello im comment
-	listen          5020;
-	# host 0.0.0.0;
-	# server_name     example.com; client_max_body_size    1m;
-# 	error_page 403 /errors/403.html;
-# 	error_page 404 /errors/404.html;
-# 	error_page 500 /errors/500.html;
-# 	error_page 502 /errors/502.html;   #comment fdgfdgfd
-	# root /home/achraf/Desktop/webserv/public2;
-
+	listen          9000;
+	listen          10000; #hello im comment
+	listen          60000;
+	host 1.1.1.3;
+	server_name     example3.com;
+	client_max_body_size    1m;
+	error_page 403 /errors/4033.html;
+	error_page 404 /errors/4044.html;
+	error_page 500 /errors/5000.html;
+	error_page 502 /errors/5022.html;   #comment fdgfdgfd
+	root /home/achraf/Desktop/webserv/public2;
+	location /
+	{
+		autoindex on;
+		index index222.html;
+		allow_methods [GET,POST,DELETE];
+		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
+	}
+	location *.php
+	{
+		allow_methods [GET,POST];
+		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
+	}
+	location /upload
+	{
+		allow_methods [POST, GET];
+		upload_enable on;
+		upload_store /upload;
+	}
 ]
