--- a/config/config.conf
+++ b/config/config.conf
@@ -1,65 +1,53 @@
 server
 [
-	listen          8080;
-	listen          9000; #hello im comment
-	listen          8020;
-	host 1.1.1.2;
-	server_name     example2.com;
+	listen          1111;
+	listen          1112; #hello im comment
+	listen          1113;
+	host 0.0.0.0;
+	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /errors/4033.html;
-	error_page 404 /errors/4044.html;
-	error_page 500 /errors/5000.html;
-	error_page 502 /errors/5022.html;   #comment fdgfdgfd
-	root /home/achraf/Desktop/webserv/public2;
+	error_page 403 /errors/server111.html;
+	error_page 404 /errors/server112.html;
+	error_page 500 /errors/server113.html;
+	error_page 502 /errors/server114.html;   #comment fdgfdgfd
+	root /home/achraf/Desktop/webserv/server1;
 	location /
 	{
 		autoindex on;
-		index index.html;
+		index server1.html;
 		allow_methods [GET,POST,DELETE];
-		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
+		fastcgi_pass /home/achraf/Desktop/server1;
 	}
 	location *.php
 	{
 		allow_methods [GET,POST];
-		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
-	}
-	location /upload
-	{
-		allow_methods [POST, GET];
-		upload_enable on;
-		upload_store /upload;
+		fastcgi_pass /home/achraf/Desktop/server1;
 	}
 ]
 
 server
 [
-	listen          9000;
-	listen          10000; #hello im comment
-	listen          60000;
-	host 1.1.1.3;
-	server_name     example3.com;
+	listen          2221;
+	listen          2222; #hello im comment
+	listen          2223;
+	host 0.0.0.0;
+	server_name     server2.com;
 	client_max_body_size    1m;
-	error_page 403 /errors/4033.html;
-	error_page 404 /errors/4044.html;
-	error_page 500 /errors/5000.html;
-	error_page 502 /errors/5022.html;   #comment fdgfdgfd
-	root /home/achraf/Desktop/webserv/public2;
+	error_page 403 /errors/server221.html;
+	error_page 404 /errors/server222.html;
+	error_page 500 /errors/server223.html;
+	error_page 502 /errors/server224.html;#comment fdgfdgfd
+	root /home/achraf/Desktop/webserv/server2;
 	location /
 	{
 		autoindex on;
-		index index222.html;
+		index server2.html;
 		allow_methods [GET,POST,DELETE];
-		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
+		fastcgi_pass /home/achraf/Desktop/server2;
 	}
 	location *.php
 	{
 		allow_methods [GET,POST];
-		fastcgi_pass /home/achraf/Desktop/owe/public/cgi;
-	}
-	location /upload
-	{
-		allow_methods [POST, GET];
-		upload_enable on;
-		upload_store /upload;
+		fastcgi_pass /home/achraf/Desktop/server2;
 	}
 ]
