--- a/config/config.conf
+++ b/config/config.conf
@@ -13,7 +13,7 @@ server
 	root /home/achraf/Desktop/webserv/server1;
 	location /
 	{
-		autoindex on;
+		autoindex gdfgdf;
 		index server1.html;
 		allow_methods [GET,POST,DELETE];
 		fastcgi_pass /home/achraf/Desktop/server1;
