--- a/conf/config.conf
+++ b/conf/config.conf
@@ -4,7 +4,7 @@ server
 	listen          1112; #hello im comment
 	listen          1113;
 	host 0.0.0.0;
-	server_name     server1.c  om;
+	server_name     server1.com;
 	client_max_body_size    1m;
 	error_page 403 /errors/server111.html;
 	error_page 404 /errors/server112.html;
@@ -13,7 +13,7 @@ server
 	root /home/achraf/Desktop/webserv/server1;
 	location /
 	{
-		autoindex gdfgdf;
+		autoindex on;
 		index server1.html;
 		allow_methods [GET,POST,DELETE];
 		fastcgi_pass /home/achraf/Desktop/server1;
@@ -25,29 +25,29 @@ server
 	}
 ]
 
-server
-[
-	listen          2221;
-	listen          2222; #hello im comment
-	listen          2223;
-	host 0.0.0.0;
-	server_name     server2.com;
-	client_max_body_size    1m;
-	error_page 403 /errors/server221.html;
-	error_page 404 /errors/server222.html;
-	error_page 500 /errors/server223.html;
-	error_page 502 /errors/server224.html;#comment fdgfdgfd
-	root /home/achraf/Desktop/webserv/server2;
-	location /
-	{
-		autoindex on;
-		index server2.html;
-		allow_methods [GET,POST,DELETE];
-		fastcgi_pass /home/achraf/Desktop/server2;
-	}
-	location *.php
-	{
-		allow_methods [GET,POST];
-		fastcgi_pass /home/achraf/Desktop/server2;
-	}
-]
+# server
+# [
+# 	listen          2221;
+# 	listen          2222; #hello im comment
+# 	listen          2223;
+# 	host 0.0.0.0;
+# 	server_name     server2.com;
+# 	client_max_body_size    1m;
+# 	error_page 403 /errors/server221.html;
+# 	error_page 404 /errors/server222.html;
+# 	error_page 500 /errors/server223.html;
+# 	error_page 502 /errors/server224.html;#comment fdgfdgfd
+# 	root /home/achraf/Desktop/webserv/server2;
+# 	location /
+# 	{
+# 		autoindex on;
+# 		index server2.html;
+# 		allow_methods [GET,POST,DELETE];
+# 		fastcgi_pass /home/achraf/Desktop/server2;
+# 	}
+# 	location *.php
+# 	{
+# 		allow_methods [GET,POST];
+# 		fastcgi_pass /home/achraf/Desktop/server2;
+# 	}
+# ]
