--- a/conf/config.conf
+++ b/conf/config.conf
@@ -11,6 +11,10 @@ server
 	error_page 500 /errors/server113.html;
 	error_page 502 /errors/server114.html;   #comment fdgfdgfd
 	root /home/achraf/Desktop/webserv/server1;
+	location /return
+	{
+		return 301;
+	}
 	location /
 	{
 		autoindex on;
@@ -18,10 +22,16 @@ server
 		allow_methods [GET,POST,DELETE];
 		fastcgi_pass /home/achraf/Desktop/server1;
 	}
-	location *.php
+	location *.php;
 	{
 		allow_methods [GET,POST];
 		fastcgi_pass /home/achraf/Desktop/server1;
+	}
+	location /upload
+	{
+		allow_methods [POST,GET,DELETE];
+		upload_enable on;
+		upload_store /upload;
 	}
 ]
 
