--- a/conf/config.conf
+++ b/conf/config.conf
@@ -1,15 +1,15 @@
 server
 [
 	listen          1111;
-	listen          1112; #hello im comment
-	listen          1113;
+	listen          1112;
+	listen          1115;
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
 	error_page 403 /errors/server111.html;
 	error_page 404 /errors/server112.html;
 	error_page 500 /errors/server113.html;
-	error_page 502 /errors/server114.html;   #comment fdgfdgfd
+	error_page 502 /errors/server114.html;
 	root /home/achraf/Desktop/webserv/server1;
 	location /return
 	{
@@ -34,7 +34,6 @@ server
 		upload_store /upload;
 	}
 ]
-
 # server
 # [
 # 	listen          2221;
@@ -51,7 +50,41 @@ server
 # 	location /
 # 	{
 # 		autoindex on;
-# 		index server2.html;
+# 		index server2.ht
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                                                                                                                                                                                                                  ml;
 # 		allow_methods [GET,POST,DELETE];
 # 		fastcgi_pass /home/achraf/Desktop/server2;
 # 	}
