--- a/conf/config.conf
+++ b/conf/config.conf
@@ -6,11 +6,11 @@ server
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /errors/server111.html;
-	error_page 404 /errors/server112.html;
-	error_page 500 /errors/server113.html;
-	error_page 502 /errors/server114.html;
-	root /home/achraf/Desktop/webserv/server1;
+	error_page 403 /Users/abettach/Desktop/webserv/src/files/errors/403.html;
+	error_page 404 /Users/abettach/Desktop/webserv/src/files/errors/404.html;
+	error_page 500 /Users/abettach/Desktop/webserv/src/files/errors/500.html;
+	error_page 502 /Users/abettach/Desktop/webserv/src/files/errors/502.html;
+	root /home/achraf/Desktop/webserv;
 	location /return
 	{
 		return 301;
