--- a/conf/config.conf
+++ b/conf/config.conf
@@ -1,6 +1,6 @@
 server
 [
-	listen          1111;
+	listen          80;
 	listen          1112;
 	listen          1115;
 	host 0.0.0.0;
@@ -10,7 +10,7 @@ server
 	error_page 404 /Users/abettach/Desktop/webserv/src/files/errors/404.html;
 	error_page 500 /Users/abettach/Desktop/webserv/src/files/errors/500.html;
 	error_page 502 /Users/abettach/Desktop/webserv/src/files/errors/502.html;
-	root /home/achraf/Desktop/webserv;
+	root /Users/abettach/Desktop/webserv/src/files;
 	location /return
 	{
 		return 301;
@@ -18,20 +18,26 @@ server
 	location /
 	{
 		autoindex on;
-		index server1.html;
+		# index lol.html;       
 		allow_methods [GET,POST,DELETE];
-		fastcgi_pass /home/achraf/Desktop/server1;
 	}
 	location *.php;
 	{
 		allow_methods [GET,POST];
-		fastcgi_pass /home/achraf/Desktop/server1;
+		fastcgi_pass /Users/abettach/goinfre/.brew/bin/php-cgi;
+	}
+	location *.py
+	{
+		allow_methods [GET,POST];
+		fastcgi_pass /usr/bin/python;
+
 	}
 	location /upload
 	{
 		allow_methods [POST,GET,DELETE];
 		upload_enable on;
 		upload_store /upload;
+		fastcgi_pass /Users/abettach/goinfre/.brew/bin/php-cgi;
 	}
 ]
 # server
