--- a/conf/config.conf
+++ b/conf/config.conf
@@ -1,25 +1,27 @@
 server
 [
+	listen          80;
 	listen          1112;
 	listen          1115;
-	listen          80;
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /Users/abettach/Desktop/webserv/src/files/errors/403.html;
-	error_page 404 /Users/abettach/Desktop/webserv/src/files/errors/404.html;
-	error_page 500 /Users/abettach/Desktop/webserv/src/files/errors/500.html;
-	error_page 502 /Users/abettach/Desktop/webserv/src/files/errors/502.html;
-	root /Users/abettach/Desktop/webserv/src/files;
+	error_page 403 /home/asus/Desktop/weeewwwwe/root/errors/403.html;
+	error_page 404 /home/asus/Desktop/weeewwwwe/root/errors/404.html;
+	error_page 500 /home/asus/Desktop/weeewwwwe/root/errors/500.html;
+	error_page 502 /home/asus/Desktop/weeewwwwe/root/errors/502.html;
+	root /home/asus/Desktop/weeewwwwe/root;
+	location /return
+	{
+		return 301 /;
+	}
 	location /
 	{
 		autoindex on;
 		index index.html;       
 		allow_methods [GET,POST,DELETE];
-	}
-	location /return
-	{
-		return 301;
+		upload_enable on;
+		upload_store /upload;
 	}
 	location *.php;
 	{
@@ -56,7 +58,7 @@ server
 # 	location /
 # 	{
 # 		autoindex on;
-# 		index server2.html                                                                                                                                                                                                                  ml;
+# 		index server2.ht                                                                                                                                                                                        ml;
 # 		allow_methods [GET,POST,DELETE];
 # 		fastcgi_pass /home/achraf/Desktop/server2;
 # 	}
