--- a/conf/config.conf
+++ b/conf/config.conf
@@ -13,12 +13,14 @@ server
 	root /home/asus/Desktop/weeewwwwe/root;
 	location /return
 	{
-		return 301 /;
+		autoindex on;
+		allow_methods [GET,POST,DELETE];
+		return 301 /cgi_files;
 	}
 	location /
 	{
 		autoindex on;
-		index index.html;       
+		# index index.html;       
 		allow_methods [GET,POST,DELETE];
 		upload_enable on;
 		upload_store /upload;
