--- a/conf/config.conf
+++ b/conf/config.conf
@@ -6,14 +6,14 @@ server
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /home/asus/Desktop/weeewwwwe/root/errors/403.html;
-	error_page 404 /home/asus/Desktop/weeewwwwe/root/errors/404.html;
-	error_page 500 /home/asus/Desktop/weeewwwwe/root/errors/500.html;
-	error_page 502 /home/asus/Desktop/weeewwwwe/root/errors/502.html;
-	root /home/asus/Desktop/weeewwwwe/root;
+	error_page 403 /Users/yqodsi/Desktop/webserv.../root/errors/403.html;
+	error_page 404 /Users/yqodsi/Desktop/webserv.../root/errors/404.html;
+	error_page 500 /Users/yqodsi/Desktop/webserv.../root/errors/500.html;
+	error_page 502 /Users/yqodsi/Desktop/webserv.../root/errors/502.html;
+	root /Users/yqodsi/Desktop/webserv.../root;
 	location /return
 	{
-		autoindex on;
+		# autoindex on;
 		allow_methods [GET,POST,DELETE];
 		return 301 /cgi_files;
 	}
