--- a/conf/config.conf
+++ b/conf/config.conf
@@ -6,24 +6,22 @@ server
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /Users/yqodsi/Desktop/webserv.../root/errors/403.html;
-	error_page 404 /Users/yqodsi/Desktop/webserv.../root/errors/404.html;
-	error_page 500 /Users/yqodsi/Desktop/webserv.../root/errors/500.html;
-	error_page 502 /Users/yqodsi/Desktop/webserv.../root/errors/502.html;
-	root /Users/yqodsi/Desktop/webserv.../root;
+	error_page 403 /Users/abettach/Desktop/webserv../root/errors/403.html;
+	error_page 404 /Users/abettach/Desktop/webserv../root/errors/404.html;
+	error_page 500 /Users/abettach/Desktop/webserv../root/errors/500.html;
+	error_page 502 /Users/abettach/Desktop/webserv../root/errors/502.html;
+	root /Users/abettach/Desktop/webserv../root;
 	location /return
 	{
-		# autoindex on;
-		allow_methods [GET,POST,DELETE];
+		upload_enable on;
+		upload_store /upload;
 		return 301 /cgi_files;
 	}
 	location /
 	{
-		autoindex on;
+		# autoindex on;
 		# index index.html;       
 		allow_methods [GET,POST,DELETE];
-		upload_enable on;
-		upload_store /upload;
 	}
 	location *.php;
 	{
