--- a/conf/config.conf
+++ b/conf/config.conf
@@ -6,11 +6,11 @@ server
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /Users/abettach/Desktop/webserv../root/errors/403.html;
-	error_page 404 /Users/abettach/Desktop/webserv../root/errors/404.html;
-	error_page 500 /Users/abettach/Desktop/webserv../root/errors/500.html;
-	error_page 502 /Users/abettach/Desktop/webserv../root/errors/502.html;
-	root /Users/abettach/Desktop/webserv../root;
+	error_page 403 /Users/abettach/Desktop/toPush/root/errors/403.html;
+	error_page 404 /Users/abettach/Desktop/toPush/root/errors/404.html;
+	error_page 500 /Users/abettach/Desktop/toPush/root/errors/500.html;
+	error_page 502 /Users/abettach/Desktop/toPush/root/errors/502.html;
+	root /Users/abettach/Desktop/toPush/root;
 	location /return
 	{
 		upload_enable on;
@@ -20,7 +20,9 @@ server
 	location /
 	{
 		# autoindex on;
-		# index index.html;       
+		# index index.html;
+		upload_enable on;
+		upload_store /upload;  
 		allow_methods [GET,POST,DELETE];
 	}
 	location *.php;
@@ -42,29 +44,50 @@ server
 		fastcgi_pass /Users/abettach/goinfre/.brew/bin/php-cgi;
 	}
 ]
+
 # server
 # [
-# 	listen          2221;
-# 	listen          2222; #hello im comment
-# 	listen          2223;
+# 	listen          80;
+# 	listen          8080;
+# 	listen          1115;
 # 	host 0.0.0.0;
 # 	server_name     server2.com;
 # 	client_max_body_size    1m;
-# 	error_page 403 /errors/server221.html;
-# 	error_page 404 /errors/server222.html;
-# 	error_page 500 /errors/server223.html;
-# 	error_page 502 /errors/server224.html;#comment fdgfdgfd
-# 	root /home/achraf/Desktop/webserv/server2;
+# 	error_page 403 /Users/abettach/Desktop/toPush/root/errors/403.html;
+# 	error_page 404 /Users/abettach/Desktop/toPush/root/errors/404.html;
+# 	error_page 500 /Users/abettach/Desktop/toPush/root/errors/500.html;
+# 	error_page 502 /Users/abettach/Desktop/toPush/root/errors/502.html;
+# 	root /Users/abettach/Desktop/toPush/root/htm_pages;
+# 	location /return
+# 	{
+# 		upload_enable on;
+# 		upload_store /upload;
+# 		return 301 /cgi_files;
+# 	}
 # 	location /
 # 	{
 # 		autoindex on;
-# 		index server2.ht                                                                                                                                                                                        ml;
+# 		# index index.html;
+# 		upload_enable on;
+# 		upload_store /upload;  
 # 		allow_methods [GET,POST,DELETE];
-# 		fastcgi_pass /home/achraf/Desktop/server2;
 # 	}
-# 	location *.php
+# 	location *.php;
 # 	{
 # 		allow_methods [GET,POST];
-# 		fastcgi_pass /home/achraf/Desktop/server2;
+# 		fastcgi_pass /Users/abettach/goinfre/.brew/bin/php-cgi;
+# 	}
+# 	location *.py
+# 	{
+# 		allow_methods [GET,POST];
+# 		fastcgi_pass /usr/bin/python;
+
+# 	}
+# 	location /upload
+# 	{
+# 		allow_methods [POST,GET,DELETE];
+# 		upload_enable on;
+# 		upload_store /upload;
+# 		fastcgi_pass /Users/abettach/goinfre/.brew/bin/php-cgi;
 # 	}
 # ]
