--- a/conf/config.conf
+++ b/conf/config.conf
@@ -6,20 +6,22 @@ server
 	host 0.0.0.0;
 	server_name     server1.com;
 	client_max_body_size    1m;
-	error_page 403 /Users/abettach/Desktop/toPush/root/errors/403.html;
-	error_page 404 /Users/abettach/Desktop/toPush/root/errors/404.html;
-	error_page 500 /Users/abettach/Desktop/toPush/root/errors/500.html;
-	error_page 502 /Users/abettach/Desktop/toPush/root/errors/502.html;
-	root /Users/abettach/Desktop/toPush/root;
+	#Dont forget to Change the Path with the correct Path ;)
+	error_page 403 /Users/abettach/Desktop/new/root/errors/403.html;
+	error_page 404 /Users/abettach/Desktop/new/root/errors/404.html;
+	error_page 500 /Users/abettach/Desktop/new/root/errors/500.html;
+	error_page 502 /Users/abettach/Desktop/new/root/errors/502.html;
+	root /Users/abettach/Desktop/new/root;
 	location /return
 	{
 		upload_enable on;
 		upload_store /upload;
+		allow_methods [GET,POST,DELETE];
 		return 301 /cgi_files;
 	}
 	location /
 	{
-		# autoindex on;
+		autoindex on;
 		# index index.html;
 		upload_enable on;
 		upload_store /upload;  
